# thrift-compiler

./: Makefile.am  configure.ac  thrift-compiler_0.8.0.orig.tar.gz.delta  thrift-compiler_0.8.0.orig.tar.gz.id  thrift-compiler_0.9.0.orig.tar.gz.delta  thrift-compiler_0.9.0.orig.tar.gz.id  thrift-compiler_0.9.1.orig.tar.gz.delta  thrift-compiler_0.9.1.orig.tar.gz.id
debian/: changelog  control  copyright  rules  thrift-compiler.examples  thrift-compiler.manpages  thrift.1
